Fixed double tap zooming effect on mobile device

--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+html, body {
+    touch-action: manipulation;
+} 
 body{
     margin: 0px;
     padding: 0px;
